Line breaks are lost when pasted into textarea text starting with a blank line set while textarea is hidden https://bugs.webkit.org/show_bug.cgi?id=74126

Reviewed by Tony Chang.

The bug was caused by the code that generated text out of pre-rendered text was generating div's inside the fragment
pasted into textarea even though serialization algorithm in textarea doesn't handle block elements.

Fixed the bug by special-casing this in createFragmentFromText. In the long run, we should really get rid of this
whole pre-rendering trick.

* editing/markup.cpp:
(WebCore::createFragmentFromText):


Canonical link: https://commits.webkit.org/90797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102392 268f45cc-cd09-0410-ab3c-d52691b4dbfc